[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://images/blueship.png" type="Texture" id=2]
[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
"player_ships",
]]
z_index = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 52.35, -1.91562, 64.4755, -25.3304, 33.9527, -39.5464, -1.16943, -47.9089, -34.6191, -42.4733, -64.3056, -27.421, -56.3613, -11.9505, -56.3613, 9.37363, -63.8875, 24.426, -34.6191, 40.7327, 0.921173, 45.7501, 33.1164, 39.4783, 64.0573, 24.8441 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( 70, -25 )

[node name="FiringPosition" type="Position2D" parent="."]
position = Vector2( 60, 0 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 70, 25 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
margin_left = -65.0
margin_top = -95.0
margin_right = 63.0
margin_bottom = -78.0
custom_fonts/font = SubResource( 1 )
text = "Player"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

